force-app/main/default/objects/Weekly_Sales_Target__c/Weekly_Sales_Target__c.object-meta.xml
<CustomObject>
    <description>南非周目标</description>
    <label>Weekly Sales Target</label>
    <nameField>
        <displayFormat>WST-{00000000}</displayFormat>
        <label>Weekly Sales Target  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Sales Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>