force-app/main/default/objects/Weekly_Sales_Target__c/fields/Action_Flg__c.field-meta.xml
<CustomField>
    <fullName>Action_Flg__c</fullName>
    <label>Action Flg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>