force-app/main/default/objects/Weekly_Sales_Target__c/fields/Actual_ACH__c.field-meta.xml
<CustomField>
    <fullName>Actual_ACH__c</fullName>
    <description>等于周实际销量/周目标销量（累积目标值）</description>
    <formula>if(Target__c = null || Target__c &lt;= 0,BA_ACH__c,BA_ACH__c  /  Target__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulated Actual ACH %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>