force-app/main/default/objects/Weekly_Sales_Target__c/fields/BA_ACH__c.field-meta.xml
<CustomField>
    <fullName>BA_ACH__c</fullName>
    <description>周实际销量</description>
    <label>BA ACH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>