force-app/main/default/objects/Weekly_Sales_Target__c/fields/BA_Name__c.field-meta.xml
<CustomField>
    <fullName>BA_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BA Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Weekly_Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>