force-app/main/default/objects/Weekly_Sales_Target__c/fields/Channel_item__c.field-meta.xml
<CustomField>
    <fullName>Channel_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Channel_item__c.SBU__c</field>
            <operation>equals</operation>
            <valueField>$User.Sales_Region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Channel_item__c</referenceTo>
    <relationshipLabel>Weekly Sales Targets</relationshipLabel>
    <relationshipName>Weekly_Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>