force-app/main/default/objects/Weekly_Sales_Target__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <formula>Channel_item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Name</label>
    <type>Text</type>
</CustomField>