force-app/main/default/objects/Weekly_Sales_Target__c/fields/Expect_Unit_Sell_Out__c.field-meta.xml
<CustomField>
    <fullName>Expect_Unit_Sell_Out__c</fullName>
    <formula>Target__c - BA_ACH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulated Expect Unit Sell Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>