force-app/main/default/objects/Weekly_Sales_Target__c/fields/From_Week__c.field-meta.xml
<CustomField>
    <fullName>From_Week__c</fullName>
    <label>From Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>