force-app/main/default/objects/Weekly_Sales_Target__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>产品型号</description>
    <label>Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Weekly Sales Targets</relationshipLabel>
    <relationshipName>Weekly_Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>