force-app/main/default/objects/Weekly_Sales_Target__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Id, 
Text(Week__c) + &apos;-&apos; +
Channel_item__r.Name + &apos;-&apos; +
IF(isblank(Store__c), &apos;&apos;, Store__r.Name + &apos;-&apos;) + 
text(Product_Line__c) + &apos;-&apos; +
Model_Name__c )</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>