force-app/main/default/objects/Weekly_Sales_Target__c/fields/Not_completed_last_week__c.field-meta.xml
<CustomField>
    <fullName>Not_completed_last_week__c</fullName>
    <label>Not completed last week</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>