force-app/main/default/objects/Weekly_Sales_Target__c/fields/Plan_Actual_ACH__c.field-meta.xml
<CustomField>
    <fullName>Plan_Actual_ACH__c</fullName>
    <formula>if(Plan_Target__c = null || Plan_Target__c &lt;= 0,BA_ACH__c,BA_ACH__c  /  Plan_Target__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Actual ACH %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>