force-app/main/default/objects/Weekly_Sales_Target__c/fields/Plan_Target__c.field-meta.xml
<CustomField>
    <fullName>Plan_Target__c</fullName>
    <label>Original Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>