force-app/main/default/objects/Weekly_Sales_Target__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>产品线,目前只有TV和Sound Bar</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
                <default>true</default>
                <label>TV</label>
            </value>
            <value>
                <fullName>Sound Bar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>