force-app/main/default/objects/Weekly_Sales_Target__c/fields/RSP__c.field-meta.xml
<CustomField>
    <fullName>RSP__c</fullName>
    <description>建议零售价</description>
    <label>RSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>