force-app/main/default/objects/Weekly_Sales_Target__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <description>销售区域,默认获取当前用户的Sales Region（只读），管理员有编辑权限</description>
    <label>Sales Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>