force-app/main/default/objects/Weekly_Sales_Target__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Channel_item__c</field>
            <operation>equals</operation>
            <valueField>Shop__c.Channel_item__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Weekly Sales Targets</relationshipLabel>
    <relationshipName>Weekly_Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>