force-app/main/default/objects/Weekly_Sales_Target__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <formula>Not_completed_last_week__c +  Not_completed_last_cycle__c +  Plan_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulated Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>