force-app/main/default/objects/Weekly_Sales_Target__c/fields/To_Week__c.field-meta.xml
<CustomField>
    <fullName>To_Week__c</fullName>
    <label>To Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>