force-app/main/default/objects/Weekly_Sales_Target__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <description>目标周,展示形式：Week1 (1月6日-1月12日）</description>
    <label>Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>