force-app/main/default/objects/Weekly_Sales_Target__c/fields/Weekly_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Sales_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Weekly Sales Target</label>
    <referenceTo>Weekly_Sales_Target__c</referenceTo>
    <relationshipLabel>Weekly Sales Targets</relationshipLabel>
    <relationshipName>Weekly_Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>