force-app/main/default/objects/Weekly_Sales_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>Channel_item__c</columns>
    <columns>Store__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Model__c</columns>
    <columns>Week__c</columns>
    <columns>Plan_Target__c</columns>
    <columns>BA_ACH__c</columns>
    <columns>Plan_Actual_ACH__c</columns>
    <columns>Plan_Expect_Unit_Sell_Out__c</columns>
    <columns>Target__c</columns>
    <columns>Actual_ACH__c</columns>
    <columns>Expect_Unit_Sell_Out__c</columns>
    <columns>RSP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>